fixed social media flex wrapping and sizing bug

--- a/css/style.css
+++ b/css/style.css
@@ -910,11 +910,6 @@ footer {
     max-width: 100vw;
   }
 }
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  footer .footer {
-    margin-left: 20px;
-  }
-}
 footer a:hover {
   text-decoration: underline;
 }
@@ -988,13 +983,6 @@ footer .social-media {
   margin-top: -24px;
   position: relative;
 }
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  footer .social-media {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-}
 footer .social-media .social-box {
   display: flex;
   width: 50%;
@@ -1002,9 +990,7 @@ footer .social-media .social-box {
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   footer .social-media .social-box {
-    margin-left: 20px;
-    max-width: 219px;
-    min-width: 107px;
+    padding: 0 10px;
   }
 }
 footer .social-media i {
@@ -1034,6 +1020,9 @@ footer .social-media .twitter:hover {
 }
 footer .social-media .linkedin:hover {
   background-color: #0077b5;
+}
+footer .social-media .row {
+  width: 100%;
 }
 @media (min-width: 1260px) {
   footer .social-media .row {
