--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -7,12 +7,6 @@
         max-width: 100vw;
    }
 
-     .footer {
-        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-            margin-left: 20px;
-       }
-     }
-
      a:hover {
          text-decoration: underline;
      }
@@ -94,21 +88,12 @@
         margin-top: -24px;
         position: relative;
 
-        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-       }
-
         .social-box {
             display: flex;
             width: 50%;
             position: relative;
-
             @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-                margin-left: 20px;
-               max-width: 219px;
-               min-width: 107px;
+                padding: 0 10px;
            }
         }
 
@@ -147,6 +132,7 @@
         }
 
         .row {
+            width: 100%;
             @media (min-width: $break-l) {
                 margin-left: 0;
                 margin-right: 0;
